--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-    <title>Diligent Design Inc</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="Diligent Design is an IT Consulting firm specializing in Site Reliability Engineering and cloud systems integration. White Rock, British Columbia.">
+    <meta name="author" content="Jason Bellis - Diligent Design and Consulting Incorporated">
+    <title>Diligent Design Inc</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
