--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-    <title>Diligent Design Inc</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="Diligent Design is an IT Consulting firm specializing in Site Reliability Engineering and cloud systems integration. White Rock, British Columbia.">
+    <meta name="author" content="Jason Bellis - Diligent Design and Consulting Incorporated">
+    <title>Diligent Design Inc</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -20,14 +22,12 @@
 
             <!-- Header -->
             <header id="header" style="top: 0;">
-                <h1>QA Testing</h1>
+                <h1>Web Design &amp; Hosting</h1>
 
 
                 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-                    <h2 class="display-4">Pricing</h2>
-                    <p class="lead">Quickly build an effective pricing table for your potential customers with this
-                        Bootstrap example. It’s built with default Bootstrap components and utilities with little
-                        customization.</p>
+                    <h2 class="display-4">Clients</h2>
+                    <p class="lead">Simple and cost-effective solutions for design &amp; hosting. Whether it's your small business website, or a high-volume e-commerce solutions - we can build it.</p>
                 </div>
 
 
