Home button working better, still some quirks

--- a/sre.html
+++ b/sre.html
@@ -19,10 +19,11 @@
         <div id="bg"></div>
         <div id="overlay"></div>
         <div id="main">
+            <div id="homelink"><a href="index.html"><i class="fas fa-home"></i></a></div>
 
             <!-- Header -->
-            <header id="header" style="top: 0;">
-                <h1>Site Reliability</h1>
+            <header id="header">
+                <h1>Site Reliability Engineering</h1>
                 <p>
                     This is Aerial, a single page, single screen responsive site template. Real simple.
                     Makes heavy use of CSS animation (something I've been messing with a lot lately).
@@ -88,6 +89,7 @@
                     safely delete the "sass/" folder).
                 </p>
             </header>
+
 
             <!-- Footer -->
             <footer id="footer">
