--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <!-- Header -->
             <header id="header">
                 <h1>Diligent Design Inc</h1>
-                <p><a href="sre.html">Service Reliability Engineering</a> &nbsp;&bull;&nbsp;
-                    Systems Integration &nbsp;&bull;&nbsp;
-                    Web App Design &amp; Hosting</p>
+                <p><a href="sre.html">Site Reliability Engineering</a>&nbsp;&bull;&nbsp;
+                    <a href="portfolio.html">Systems Integration</a>&nbsp;&bull;&nbsp;
+                    <a href="portfolio.html">Web App Design &amp; Hosting</a></p>
                 <nav>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/jasonbellis/" class="fab fa-linkedin"><span
