--- a/portfolio.html
+++ b/portfolio.html
@@ -19,21 +19,23 @@
         <div id="bg"></div>
         <div id="overlay"></div>
         <div id="main">
+            <div id="homelink"><a href="index.html"><i class="fas fa-home"></i></a></div>
 
             <!-- Header -->
-            <header id="header" style="top: 0;">
-                <h1>Web Design &amp; Hosting</h1>
+            <header id="header">
+                <h1>Web Apps</h1>
 
 
-                <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-                    <h2 class="display-4">Clients</h2>
-                    <p class="lead">Simple and cost-effective solutions for design &amp; hosting. Whether it's your small business website, or a high-volume e-commerce solutions - we can build it.</p>
+                <div class="pricing-header pt-md-3 pb-md-4 mx-auto text-center">
+                    <h2 class="display-4">Design &amp; Hosting</h2>
+                    <p>Cost-effective solutions for web application design &amp; hosting.<br />
+                        Whether it's your small business website, or a high volume e-commerce solution. &nbsp;We can build it.</p>
                 </div>
 
 
-                <div class="card-deck mb-3 text-center">
-                    <div class="card mb-4 shadow-sm">
-                        <div class="card-header">
+                <div class="card-deck text-center text-dark">
+                    <div class="card shadow-sm">
+                        <div class="card-header text-dark">
                             <h4 class="my-0 font-weight-normal">Free</h4>
                         </div>
                         <div class="card-body">
@@ -48,7 +50,7 @@
                                 free</button>
                         </div>
                     </div>
-                    <div class="card mb-4 shadow-sm">
+                    <div class="card shadow-sm">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">Pro</h4>
                         </div>
@@ -63,7 +65,7 @@
                             <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
                         </div>
                     </div>
-                    <div class="card mb-4 shadow-sm">
+                    <div class="card shadow-sm">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">Enterprise</h4>
                         </div>
