--- a/portfolio.html
+++ b/portfolio.html
@@ -33,55 +33,50 @@
                 </div>
 
 
-                <div class="card-deck text-center text-dark">
+                <div class="card-deck text-dark">
                     <div class="card shadow-sm">
                         <div class="card-header text-dark">
-                            <h4 class="my-0 font-weight-normal">Free</h4>
+                            <h4 class="my-0 font-weight-normal">The Clearing Music Festival</h4>
                         </div>
-                        <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
-                                <li>10 users included</li>
-                                <li>2 GB of storage</li>
-                                <li>Email support</li>
-                                <li>Help center access</li>
+                        <div class="card-body p-2">
+                            <ul class="list-unstyled">
+                                <li><a href="https://theclearingmusicfestival.com">theClearingMusicFestival.com</a></li>
+                                <li>Private music festival</li>
+                                <li>Client: Big 1 Productions</li>
+                                <li>2011 - 2015</li>
                             </ul>
-                            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for
-                                free</button>
                         </div>
+                        <img src="img/portfolio/cmf.gif" class="p-2" alt="The Clearing Music Festival">
                     </div>
                     <div class="card shadow-sm">
                         <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Pro</h4>
+                            <h4 class="my-0 font-weight-normal">Majestic Landscaping</h4>
                         </div>
-                        <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
-                                <li>20 users included</li>
-                                <li>10 GB of storage</li>
-                                <li>Priority email support</li>
-                                <li>Help center access</li>
+                        <div class="card-body p-2">
+                            <ul class="list-unstyled">
+                                <li><a href="http://www.MajesticLandscaping.com/">MajesticLandscaping.com</a></li>
+                                <li>Majestic Landscaping</li>
+                                <li>Client: Gord Gough</li>
+                                <li>2010 - 2012</li>
                             </ul>
-                            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
                         </div>
+                        <img src="img/portfolio/majestic.gif" class="p-2" alt="Majestic Landscaping">
                     </div>
                     <div class="card shadow-sm">
                         <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Enterprise</h4>
+                            <h4 class="my-0 font-weight-normal">Still Waters Counselling</h4>
                         </div>
-                        <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-                            <ul class="list-unstyled mt-3 mb-4">
-                                <li>30 users included</li>
-                                <li>15 GB of storage</li>
-                                <li>Phone and email support</li>
-                                <li>Help center access</li>
+                        <div class="card-body p-2">
+                            <ul class="list-unstyled">
+                                <li><a href="http://www.StillwatersPastoral.com/">StillwatersPastoral.com</a></li>
+                                <li>Stillwaters Pastoral &amp; Alcoholism Counselling</li>
+                                <li>Client: Joan Mitchell</li>
+                                <li>2012 - 2015</li>
                             </ul>
-                            <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
                         </div>
+                        <img src="img/portfolio/stillwaters.gif" class="p-2" alt="Stillwaters Pastoral Counselling">
                     </div>
                 </div>
-
 
             </header>
 
