SRE and portfolio updates, style cleanup, animation timings

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
             <!-- Footer -->
             <footer id="footer">
-                <span class="copyright">Design credits to <a href="https://html5up.net">html5up.net</a> and
-                    <a href="https://unsplash.com/">Unsplash</a></span>
+                <span class="copyright">Design credits to <a href="https://html5up.net" target="_blank">html5up.net</a> and
+                    <a href="https://unsplash.com/" target="_blank">Unsplash</a></span>
             </footer>
 
         </div>
