--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,20 @@
             <div id="homelink"><a href="index.html"><i class="fas fa-home"></i></a></div>
 
             <!-- Header -->
-            <header id="header">
-                <h1>Web Apps</h1>
+            <header id="header" class="mb-5">
+                <h1 class="pt-4">Web Apps</h1>
 
-
-                <div class="pricing-header pt-md-3 pb-md-4 mx-auto text-center">
-                    <h2 class="display-4">Design &amp; Hosting</h2>
+                <hr>
+                <div class="pt-3 pb-1 mx-auto text-center">
+                    <h2>Design &amp; Hosting</h2>
                     <p>Cost-effective solutions for web application design &amp; hosting.<br />
-                        Whether it's your small business website, or a high volume e-commerce solution. &nbsp;We can build it.</p>
+                        Whether it's your small business website, or a high volume e-commerce solution. &nbsp;<span class="font-weight-bold">We can build it</span>.</p>
                 </div>
 
+                <div class="pt-3 pb-2 mx-auto text-center">
+                    <hr />
+                    <h5>Our clients:</h5>
+                </div>
 
                 <div class="card-deck text-dark">
                     <div class="card shadow-sm">
@@ -41,8 +45,8 @@
                         <div class="card-body p-2">
                             <ul class="list-unstyled">
                                 <li><a href="https://theclearingmusicfestival.com">theClearingMusicFestival.com</a></li>
+                                <li>Client - Big 1 Productions</li>
                                 <li>Private music festival</li>
-                                <li>Client: Big 1 Productions</li>
                                 <li>2011 - 2015</li>
                             </ul>
                         </div>
@@ -55,8 +59,8 @@
                         <div class="card-body p-2">
                             <ul class="list-unstyled">
                                 <li><a href="http://www.MajesticLandscaping.com/">MajesticLandscaping.com</a></li>
+                                <li>Client - Gord Gough</li>
                                 <li>Majestic Landscaping</li>
-                                <li>Client: Gord Gough</li>
                                 <li>2010 - 2012</li>
                             </ul>
                         </div>
@@ -69,8 +73,8 @@
                         <div class="card-body p-2">
                             <ul class="list-unstyled">
                                 <li><a href="http://www.StillwatersPastoral.com/">StillwatersPastoral.com</a></li>
+                                <li>Client - Joan Mitchell</li>
                                 <li>Stillwaters Pastoral &amp; Alcoholism Counselling</li>
-                                <li>Client: Joan Mitchell</li>
                                 <li>2012 - 2015</li>
                             </ul>
                         </div>
@@ -82,8 +86,8 @@
 
             <!-- Footer -->
             <footer id="footer">
-                <span class="copyright">Design credits to <a href="https://html5up.net">html5up.net</a> and
-                    <a href="https://unsplash.com/">Unsplash</a></span>
+                <span class="copyright">Design credits to <a href="https://html5up.net" target="_blank">html5up.net</a> and
+                    <a href="https://unsplash.com/" target="_blank">Unsplash</a></span>
             </footer>
 
         </div>
