--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <header id="header">
                 <h1>Diligent Design Inc</h1>
                 <p><a href="sre.html">Site Reliability Engineering</a>&nbsp;&bull;&nbsp;
-                    <a href="portfolio.html">Systems Integration</a>&nbsp;&bull;&nbsp;
+                    <a href="integration.html">Systems Integration</a>&nbsp;&bull;&nbsp;
                     <a href="portfolio.html">Web App Design &amp; Hosting</a></p>
                 <nav>
                     <ul>
