--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,33 @@
         <div id="bg"></div>
         <div id="overlay"></div>
         <div id="main">
-            <div id="homelink"><a href="index.html"><i class="fas fa-home"></i></a></div>
+
+            <!-- Navbar -->
+            <nav class="navbar">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDDC" aria-controls="navbarDDC" aria-expanded="false" aria-label="Navigation">
+                    <span class="navbar-toggler-icon"><i class="fas fa-home text-light"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarDDC">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sre.html">SRE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Design</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="integration.html">Integration</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
             <!-- Header -->
-            <header id="header" class="mb-5">
-                <h1 class="pt-4">Web Apps</h1>
+            <header id="header" class="mb-5 mt-4">
+                <h1 class="pt-4 pb-3">Web Apps</h1>
 
                 <hr>
                 <div class="pt-3 pb-1 mx-auto text-center">
@@ -42,7 +64,7 @@
                         <div class="card-header text-dark">
                             <h4 class="my-0 font-weight-normal">The Clearing Music Festival</h4>
                         </div>
-                        <div class="card-body p-2">
+                        <div class="card-body pt-4">
                             <ul class="list-unstyled">
                                 <li><a href="https://theclearingmusicfestival.com">theClearingMusicFestival.com</a></li>
                                 <li>Client - Big 1 Productions</li>
@@ -56,7 +78,7 @@
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">Majestic Landscaping</h4>
                         </div>
-                        <div class="card-body p-2">
+                        <div class="card-body pt-4">
                             <ul class="list-unstyled">
                                 <li><a href="http://www.MajesticLandscaping.com/">MajesticLandscaping.com</a></li>
                                 <li>Client - Gord Gough</li>
@@ -70,7 +92,7 @@
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">Still Waters Counselling</h4>
                         </div>
-                        <div class="card-body p-2">
+                        <div class="card-body pt-4">
                             <ul class="list-unstyled">
                                 <li><a href="http://www.StillwatersPastoral.com/">StillwatersPastoral.com</a></li>
                                 <li>Client - Joan Mitchell</li>
