--- a/sre.html
+++ b/sre.html
@@ -19,11 +19,33 @@
         <div id="bg"></div>
         <div id="overlay"></div>
         <div id="main">
-            <div id="homelink"><a href="index.html"><i class="fas fa-home"></i></a></div>
+
+            <!-- Navbar -->
+            <nav class="navbar">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDDC" aria-controls="navbarDDC" aria-expanded="false" aria-label="Navigation">
+                    <span class="navbar-toggler-icon"><i class="fas fa-home text-light"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarDDC">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sre.html">SRE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Design</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="integration.html">Integration</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
             <!-- Header -->
-            <header id="header" class="mb-5">
-                <h1 class="pt-4">Site Reliability Engineering</h1>
+            <header id="header" class="mb-5 mt-4">
+                <h1 class="pt-4 pb-3">Site Reliability Engineering</h1>
 
                 <hr>
                 <p class="mb-4">The discipline of <a href="https://sre.google/">Site Reliability Engineering (SRE)</a>
