MVP1 code complete

--- a/integration.html
+++ b/integration.html
@@ -34,10 +34,10 @@
                             <a class="nav-link" href="sre.html">SRE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Design</a>
+                            <a class="nav-link" href="integration.html">Integration</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="integration.html">Integration</a>
+                            <a class="nav-link" href="portfolio.html">Design</a>
                         </li>
                     </ul>
                 </div>
@@ -45,23 +45,20 @@
 
             <!-- Header -->
             <header id="header" class="mb-5 mt-4">
-                <h1 class="pt-4 pb-3">Systems Integration</h1>
+                <h1 class="py-4">Systems Integration</h1>
 
                 <hr>
-                <p class="mb-4">The discipline of <a href="https://sre.google/">Site Reliability Engineering (SRE)</a>
-                    applies software engineering solutions to operational challenges, like scalability or reliability.
-                    The <em>foundation</em> of SRE is <span class="font-weight-bold"><a href="https://www.moogsoft.com/blog/observability-site-reliability-engineers/" target="_blank">observability</a></span>.</p>
+                <p class="mb-2">Diligent Design integrates all kinds of computing systems and platforms.</p>
+                <p class="mb-2">Need your Salesforce to talk to DocuSign? &nbsp;<span class="font-weight-bold">We do that.</span>
+                    A custom web app that can login users via Facebook account? &nbsp;<span class="font-weight-bold">We do that too.</span></p>
+                    <p class="mb-4">We draw on decades of experience to find integration solutions for whatever you have in mind.</p>
 
                 <hr />
-                <p class="mb-2">Using an Application Performance Management system like
-                    <a href="https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview/" target="_blank">Azure Application Insights</a>,
-                    allows us to gather application telemetry that drives powerful business insights and decision making.
+                <p class="mt-4 mb-2">We're certified consultants for
+                    <a href="https://boomi.com/platform/integration/" target="_blank">Boomi Atomsphere</a> integration platform and
+                    <a href="https://azure.microsoft.com/en-us/services/data-factory/" target="_blank">Azure Data Factory</a>.
                 </p>
-                <p class="mb-4">Automation can be built from this data - to scale up server capacity, or alert your support team to potential problems.</p>
-
-                <hr>
-                <p class="mb-5">Diligent Design specializes in Microsoft's <span class="font-weight-bold">Azure</span> cloud. But, we can build a solution on the cloud provider of your choosing - or on premises.
-                    Let us help you to engineer the right solution, for a fast and reliable system that won't let you down.</p>
+                <p class="mb-5"><span class="font-italic">Connect</span>&nbsp;with Diligent Design today, and we'll engineer the best integration solution for your needs.</p>
 
             </header>
 
