--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,10 @@
                             <a class="nav-link" href="sre.html">SRE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Design</a>
+                            <a class="nav-link" href="integration.html">Integration</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="integration.html">Integration</a>
+                            <a class="nav-link" href="portfolio.html">Design</a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
 
             <!-- Header -->
             <header id="header" class="mb-5 mt-4">
-                <h1 class="pt-4 pb-3">Web Apps</h1>
+                <h1 class="py-4">Web Apps</h1>
 
                 <hr>
                 <div class="pt-3 pb-1 mx-auto text-center">
@@ -56,15 +56,15 @@
 
                 <div class="pt-3 pb-2 mx-auto text-center">
                     <hr />
-                    <h5>Our clients:</h5>
+                    <h3>Our clients</h3>
                 </div>
 
                 <div class="card-deck text-dark">
                     <div class="card shadow-sm">
-                        <div class="card-header text-dark">
-                            <h4 class="my-0 font-weight-normal">The Clearing Music Festival</h4>
+                        <div class="card-header py-3">
+                            <h4>The Clearing Music Festival</h4>
                         </div>
-                        <div class="card-body pt-4">
+                        <div class="card-body py-4">
                             <ul class="list-unstyled">
                                 <li><a href="https://theclearingmusicfestival.com">theClearingMusicFestival.com</a></li>
                                 <li>Client - Big 1 Productions</li>
@@ -75,8 +75,8 @@
                         <img src="img/portfolio/cmf.gif" class="p-2" alt="The Clearing Music Festival">
                     </div>
                     <div class="card shadow-sm">
-                        <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Majestic Landscaping</h4>
+                        <div class="card-header py-3">
+                            <h4>Majestic Landscaping</h4>
                         </div>
                         <div class="card-body pt-4">
                             <ul class="list-unstyled">
@@ -89,8 +89,8 @@
                         <img src="img/portfolio/majestic.gif" class="p-2" alt="Majestic Landscaping">
                     </div>
                     <div class="card shadow-sm">
-                        <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Still Waters Counselling</h4>
+                        <div class="card-header py-3">
+                            <h4>Still Waters Counselling</h4>
                         </div>
                         <div class="card-body pt-4">
                             <ul class="list-unstyled">
