--- a/sre.html
+++ b/sre.html
@@ -34,10 +34,10 @@
                             <a class="nav-link" href="sre.html">SRE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Design</a>
+                            <a class="nav-link" href="integration.html">Integration</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="integration.html">Integration</a>
+                            <a class="nav-link" href="portfolio.html">Design</a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
 
             <!-- Header -->
             <header id="header" class="mb-5 mt-4">
-                <h1 class="pt-4 pb-3">Site Reliability Engineering</h1>
+                <h1 class="py-4">Site Reliability Engineering</h1>
 
                 <hr>
                 <p class="mb-4">The discipline of <a href="https://sre.google/">Site Reliability Engineering (SRE)</a>
@@ -60,8 +60,8 @@
                 <p class="mb-4">Automation can be built from this data - to scale up server capacity, or alert your support team to potential problems.</p>
 
                 <hr>
-                <p class="mb-5">Diligent Design specializes in Microsoft's <span class="font-weight-bold">Azure</span> cloud. But, we can build a solution on the cloud provider of your choosing - or on premises.
-                    Let us help you to engineer the right solution, for a fast and reliable system that won't let you down.</p>
+                <p class="mb-5">Diligent Design specializes in <span class="font-weight-bold">Microsoft Azure</span> cloud platform. But, we'll build a solution on the cloud provider of your choosing - or on premises.
+                    Let us engineer the right solution, for a fast and reliable system that won't let you down.</p>
 
             </header>
 
