some file cleanup and README.md

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                                 <li>2011 - 2015</li>
                             </ul>
                         </div>
-                        <img src="img/portfolio/cmf.gif" class="p-2" alt="The Clearing Music Festival">
+                        <img src="img/cmf.gif" class="p-2" alt="The Clearing Music Festival">
                     </div>
                     <div class="card shadow-sm">
                         <div class="card-header py-3">
@@ -86,7 +86,7 @@
                                 <li>2010 - 2012</li>
                             </ul>
                         </div>
-                        <img src="img/portfolio/majestic.gif" class="p-2" alt="Majestic Landscaping">
+                        <img src="img/majestic.gif" class="p-2" alt="Majestic Landscaping">
                     </div>
                     <div class="card shadow-sm">
                         <div class="card-header py-3">
@@ -100,7 +100,7 @@
                                 <li>2012 - 2015</li>
                             </ul>
                         </div>
-                        <img src="img/portfolio/stillwaters.gif" class="p-2" alt="Stillwaters Pastoral Counselling">
+                        <img src="img/stillwaters.gif" class="p-2" alt="Stillwaters Pastoral Counselling">
                     </div>
                 </div>
 
