--- a/sre.html
+++ b/sre.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Diligent Design is an IT Consulting firm specializing in Site Reliability Engineering and cloud systems integration. White Rock, British Columbia.">
     <meta name="author" content="Jason Bellis - Diligent Design and Consulting Incorporated">
     <title>Diligent Design Inc</title>
