minor wording integration.html

--- a/integration.html
+++ b/integration.html
@@ -55,8 +55,8 @@
 
                 <hr />
                 <p class="mt-4 mb-2">We're certified consultants for
-                    <a href="https://boomi.com/platform/integration/" target="_blank">Boomi Atomsphere</a> integration platform and
-                    <a href="https://azure.microsoft.com/en-us/services/data-factory/" target="_blank">Azure Data Factory</a>.
+                    <a href="https://boomi.com/platform/integration/" target="_blank">Boomi Atomsphere</a> and
+                    <a href="https://azure.microsoft.com/en-us/services/data-factory/" target="_blank">Azure Data Factory</a> integration platforms.
                 </p>
                 <p class="mb-5"><span class="font-italic">Connect</span>&nbsp;with Diligent Design today, and we'll engineer the best integration solution for your needs.</p>
 
