--- a/integration.html
+++ b/integration.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-20060282-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-20060282-1');
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Diligent Design is an IT Consulting firm specializing in Site Reliability Engineering and cloud systems integration. White Rock, British Columbia.">
