link to cv and change icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                     class="label">Facebook</span></a></li>
                         <li><a href="https://www.advrider.com" class="fas fa-motorcycle"><span class="label">ADV
                                     Rider</span></a></li>
-                        <li><a href="#" class="fas fa-envelope"><span class="label">Contact</span></a></li>
+                        <li><a href="cv.pdf" class="fas fa-file-alt"><span class="label">Curriculum Vitae</span></a></li>
                     </ul>
                 </nav>
             </header>
