minor doc formatting

--- a/index.html
+++ b/index.html
@@ -32,15 +32,13 @@
                 <h1>Diligent Design Inc</h1>
                 <p><a href="sre.html">Site Reliability Engineering</a>&nbsp;&nbsp;&bull;&nbsp;
                     <a href="integration.html">Systems Integration</a>&nbsp;&nbsp;&bull;&nbsp;
-                    <a href="portfolio.html">Web App Design &amp; Hosting</a></p>
+                    <a href="portfolio.html">Web App Design &amp; Hosting</a>
+                </p>
                 <nav>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/jasonbellis/" class="fab fa-linkedin"><span
-                                    class="label">LinkedIn</span></a></li>
-                        <li><a href="https://github.com/diligent176" class="fab fa-github"><span
-                                    class="label">Github</span></a></li>
-                        <li><a href="https://www.facebook.com/bellisjason" class="fab fa-facebook-f"><span
-                                    class="label">Facebook</span></a></li>
+                        <li><a href="https://www.linkedin.com/in/jasonbellis/" class="fab fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                        <li><a href="https://github.com/diligent176" class="fab fa-github"><span class="label">Github</span></a></li>
+                        <li><a href="https://www.facebook.com/bellisjason" class="fab fa-facebook-f"><span class="label">Facebook</span></a></li>
                         <li><a href="https://www.advrider.com" class="fas fa-motorcycle"><span class="label">ADV
                                     Rider</span></a></li>
                         <li><a href="cv.pdf" class="fas fa-file-alt"><span class="label">Curriculum Vitae</span></a></li>
