--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Diligent Design is an IT Consulting firm specializing in Site Reliability Engineering and cloud systems integration. White Rock, British Columbia.">
     <meta name="author" content="Jason Bellis - Diligent Design and Consulting Incorporated">
+    <link rel="canonical" href="https://diligentdesign.ca/portfolio">
     <title>Diligent Design Inc</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" />
